--- a/docs/index.qmd
+++ b/docs/index.qmd
@@ -435,137 +435,5 @@ autoplot(wf_res)
 rank_results(wf_res, rank_metric = "rsq", select_best = FALSE)
 
 ```
-Looking at the results, it is clear that I should move foward witht he "boost_tree" model, as it has the highest R^2 value, and the lowest RMSE.
 
-```{r}
-# 0. load what you need
-set.seed(123)         # for reproducibility
-
-# 1. make your target
-camels <- camels %>% 
-  mutate(logQmean = log(q_mean))   # log‐transform your outcome up front
-
-# 2. initial split 75% train / 25% test
-camels_split  <- initial_split(camels, prop = 0.75, strata = logQmean)
-camels_train  <- training(camels_split)
-camels_test   <- testing(camels_split)
-
-# 3. 10‐fold CV on the training set
-camels_cv <- vfold_cv(camels_train, v = 10, strata = logQmean)
-
-```
-
-```{r}
-# A. recipe: add/remove predictors and preprocessing as you like
-rec_xgb <- recipe(logQmean ~ 
-                     aridity + 
-                     p_mean + 
-                     soil_porosity + 
-                     geol_porostiy,     # <-- correct spelling here
-                   data = camels_train) %>%
-  step_log(all_numeric_predictors(), offset = 1) %>%
-  step_interact(terms = ~ aridity:p_mean) %>%
-  step_normalize(all_numeric_predictors())
-      # center & scale
-
-# B. XGBoost spec with tuneable hyper‐parameters
-xgb_spec <- boost_tree(
-  trees         = 2000,
-  tree_depth    = tune(),
-  learn_rate    = tune(),
-  loss_reduction = tune(),
-  sample_size   = tune()
-) %>%
-  set_engine("xgboost") %>%
-  set_mode("regression")
-
-# C. put it all in a workflow
-xgb_wf <- workflow() %>%
-  add_recipe(rec_xgb) %>%
-  add_model(xgb_spec)
-
-# D. create a reasonable hyper‐parameter grid
-xgb_params <- parameters(xgb_spec)
-
-xgb_grid   <- grid_space_filling(parameters(xgb_spec), size = 20)
-
-xgb_tune   <- tune_grid(
-  xgb_wf,
-  resamples = camels_cv,
-  grid      = xgb_grid,
-  metrics   = metric_set(rsq, rmse),
-  control   = control_grid(save_pred = TRUE)
-)
-
-autoplot(xgb_tune)
-collect_metrics(xgb_tune)
-
-
-
-
-# G. pull out the best for R², finalize & test
-# G. pull out the best for R²
-best_params <- select_best(xgb_tune, metric = "rsq")
-
-# finalize & test
-final_wf  <- finalize_workflow(xgb_wf, best_params)
-final_fit <- last_fit(final_wf, camels_split)
-
-collect_metrics(final_fit)
-
-```
-
-
-```{r}
-logQmean ~ 
-  p_mean       +   # mean annual precipitation – main driver of streamflow 
-  pet_mean     +   # potential evapotranspiration – controls loss  
-  aridity      +   # long‐term dryness metric (p_mean / pet_mean)  
-  frac_snow    +   # fraction of precipitation as snow – seasonality  
-  soil_porosity +   # controls infiltration & baseflow  
-  geol_porostiy    # geology‐inferred porosity (rocks)  
-
-```
-
-I chose these 6 predictors because p_mean and pet_mean come straight from the PDF description and together they explain the water input vs. evaporative loss.
-
-Aridity is simply p_mean / pet_mean; it captures the overall climate “dryness.”
-
-frac_snow tells us how much of that precipitation falls as snow which is important for timing/magnitude of summer flows.
-
-soil_porosity and geol_porostiy control how much water the basin can store and slowly release, smoothing peaks and boosting baseflow.
-
-Empirically in hydrology these six together usually explain the lion’s share of cross‐site Qmean variability, so they’re a logical starting point.
-
-```{r}
-rec_final <- recipe(
-                logQmean ~ 
-                  p_mean + pet_mean + aridity + frac_snow + 
-                  soil_porosity + geol_porostiy,
-                data = camels_train
-              ) %>%
-  # a) log‐transform the three most skewed inputs
-  step_log(all_of(c("p_mean", "pet_mean", "frac_snow")), offset = 1) %>%
-  
-  # b) add a simple interaction between precipitation & aridity
-  step_interact(terms = ~ p_mean:aridity) %>%
-  
-  # c) center & scale everything so XGBoost doesn't have to handle wildly different ranges
-  step_normalize(all_numeric_predictors()) %>%
-  
-  # d) drop any zero‐variance columns (just in case)
-  step_zv(all_predictors())
-
-```
-
-```{r}
-final_wf <- workflow() %>%
-  add_recipe(rec_final) %>%
-  add_model(xgb_spec) %>%
-  finalize_workflow(best_params)
-
-final_fit <- last_fit(final_wf, camels_split)
-collect_metrics(final_fit)
-
-```
-
+Looking at the results, it is clear that I should move foward witht he "boost_tree" model, as it has the highest R\^2 value, and the lowest RMSE.
